Updating some texts and typos

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <div class="block">
 	<img src="elin.svg" alt="elin" id="elin-img" />
 	<div class="text-box">
-		<p>I'm a positive and dedicated person UXer loves life, popcorn and a good challenge. I also love code, development, interaction design and innovative tech. I'm studying the MSc program in Interaction technology and Design at Umeå University in northern Sweden.</p><p>Have a look at my <a href="https://docs.google.com/document/d/1I2Fiu_1ojyTJeZRH89xsWn7eNmiec9M-flAWrQScqjc/edit?usp=sharing" target="_blank">resumé</a> and feel free to contact me if you have any questions, puns, ideas or tips about life, the universe and everything. I have virtual presences here and there, so it shouldn't be too hard.</p>
+		<p>I'm a positive and dedicated UXer loves life, popcorn and a good challenge. I also love code, development, interaction design and innovative tech. I'm studying the MSc program in Interaction technology and Design at Umeå University in northern Sweden.</p><p>Have a look at my <a href="https://docs.google.com/document/d/1I2Fiu_1ojyTJeZRH89xsWn7eNmiec9M-flAWrQScqjc/edit?usp=sharing" target="_blank">resumé</a> and feel free to contact me if you have any questions, puns, ideas or tips about life, the universe and everything. I have virtual presences here and there, so it shouldn't be too hard.</p>
 	</div>
 		<a href="https://se.linkedin.com/in/hejelin"><img class="socmed" src="linkedin-g.svg" alt="facebook" /></a>
 		<a href="http://twitter.com/hejelinnilsson"><img class="socmed" src="twitter-g.svg" alt="facebook" /></a>
@@ -40,7 +40,7 @@
 	<img src="ecomon.png" alt="Ecomon" />
 	<div class="text-box">
 		<h2>Ecomon</h2>
-		<p>During a course on innovative mobile services and systems, me and three course mates worked on a project called Ecomon. The assignment was to develop a system that uses three devices that makes the user reflect on personal energy consumption. We made an Android app with wear extension and a web app to go with it. The solution was based on gamification and context awareness, so the application sent notification based on the user's context. The user gets points, achievements or levels up depending notification actions taken. For example, if it's raining outside, the user might get a notification that says "If you take the bus now, you can make it to work without wasting fuel in your car". The user can then choose to "Buy a ticket" or "Read more", which gives more or less points in the system. The result was a working, albeit restricted and hard coded, prototype of the app, complete with web and wear.<!--Check out the <a href="https://ecomon.herokuapp.com">web app demo</a>. -->I worked on the Android application.</p>
+		<p>During a course on innovative mobile services and systems, me and three course mates worked on a project called Ecomon. The assignment was to develop a system that uses three devices that makes the user reflect on personal energy consumption. We made an Android app with wear extension and a web app to go with it. The solution was based on gamification and context awareness, so the application sent notifications based on the user's context. The user gets points, achievements or levels up depending on the actions taken from the notification. For example, if it's raining outside, the user might get a notification that says "If you take the bus now, you can make it to work without wasting fuel in your car". The user can then choose to "Buy a ticket" or "Read more", which gives more or less points in the system. The result was a working, albeit restricted and hard coded, prototype of the app, complete with web and wear.<!--Check out the <a href="https://ecomon.herokuapp.com">web app demo</a>. --> I worked on the Android application.</p>
 		<p><strong>Tech used:</strong> Android native with Wear extension, retrofit, yeoman, MEAN-stack.</p>
 	</div>
 </div>
@@ -67,7 +67,7 @@
 	<img src="artnet.png" alt="ArtNet" />
 	<div class="text-box">
 		<h2>Artnet</h2>
-		<p>On a prototyping course for mobile application, me and two classmates worked on a prototype for Artnet, a social network for art. The purpose of the application was to increse interest in art and culture, and to make it more available. With the app, users can easily find art that is closeby or in a museum, and once they visit an art piece, they can rate it. By rating different kinds of art, the user gets achievements and works their way up a title tree. Everyone starts out as a brush cleaner, and goes on to become graffiti guru, culture aunt, etc. The prototype made was a web app, which I implemented. See the <a href="http://artnet.hejelin.se">Artnet demo</a> (works best on mobile) or check out the source on <a href="https://github.com/hejelin/artnetinhtml">GitHub</a>.</p>
+		<p>On a prototyping course for mobile applications, me and two classmates worked on a prototype for Artnet, a social network for art. The purpose of the application was to increse interest in art and culture, and to make it more available. With the app, users can easily find art that is nearby or in a nearby museum, and once they visit an art piece, they can rate it. By rating different kinds of art, the users get achievements and work their way up a title tree. Everyone starts out as a brush cleaner, and goes on to become graffiti guru, culture aunt, etc. The prototype made was a web app, which I implemented. See the <a href="http://artnet.hejelin.se">Artnet demo</a> (works best on mobile) or check out the source on <a href="https://github.com/hejelin/artnetinhtml">GitHub</a>.</p>
 		<p><strong>Tech used:</strong> AngularJS.</p>
 	</div>
 </div>
@@ -76,7 +76,7 @@
 	<img src="ubiq.png" alt="SmartOffice" />
 	<div class="text-box">
 		<h2>SmartOffice</h2>
-		<p>Ubiquitous computing is all about integrating technology into our everyday life, our surroundings and the objects we interact with. During an assignment we had the task of designing a context-aware smart environment, and my group came up with SmartOffice, a system that can basically replace office assistants. We made a scale model of an office using cardboard, and with different sensors and servos we made a functioning prototypes of different functionalities. The project was also documented with two short videos that can be seen on <a href="http://static.hejelin.se/ubiq">the project website</a>.</p>
+		<p>Ubiquitous computing is all about integrating technology into our everyday life, our surroundings and the objects we interact with. During an assignment we had the task of designing a context-aware smart environment, and my group came up with SmartOffice, a system designed to replace office assistants. We made a scale model of an office using cardboard, and with different sensors and servos we made a functioning prototypes of different functionalities. The project was also documented with two short videos that can be seen on <a href="http://static.hejelin.se/ubiq">the project website</a>.</p>
 		<p><strong>Tech used:</strong> <a href="http://www.phidgets.com">Phidgets</a>: RFID-tags and readers, LCD-screens, LED-lights, servos etc.</p>
 	</div>
 </div>
