--- a/index.html
+++ b/index.html
@@ -3,130 +3,133 @@
 <head>
 	<meta charset="utf-8">
  
- 	<title>Elin Nilsson</title>
+ 	<title>Hej Elin | Portfolio</title>
 
 	<link rel="stylesheet" href="style.css" type="text/css">
-	<link href="http://fonts.googleapis.com/css?family=Roboto:400,300,100" rel="stylesheet" type="text/css">
+	<link href="http://fonts.googleapis.com/css?family=Questrial" rel="stylesheet" type="text/css">
+	<script type="text/javascript" src="script.js"></script>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
-<h1>Hi, I'm Elin</h1>
 
-<div class="block">
-	<img src="elin.svg" alt="elin" id="elin-img" />
-	<div class="text-box">
-		<p>I'm a positive and dedicated UXer loves life, popcorn and a good challenge. I also love code, development, interaction design and innovative tech. I'm studying the MSc program in Interaction technology and Design at Umeå University in northern Sweden.</p><p>Have a look at my <a href="https://docs.google.com/document/d/1I2Fiu_1ojyTJeZRH89xsWn7eNmiec9M-flAWrQScqjc/edit?usp=sharing" target="_blank">resumé</a> and feel free to contact me if you have any questions, puns, ideas or tips about life, the universe and everything. I have virtual presences here and there, so it shouldn't be too hard.</p>
+<!--
+
+	TODO:
+
+	- Animations
+	- Delightful interactive elements
+	- Tags and dates on projects
+
+ -->
+
+<header>
+	<div id="name">
+	  <div id="e" class="letter">
+	    <div class="segment"></div>
+	    <div class="segment"></div>
+	    <div class="segment"></div>
+	    <div class="segment"></div>
+	  </div>
+	  <div id="l" class="letter">
+	    <div class="segment"></div>
+	    <div class="segment"></div>
+	  </div>
+	  <div id="i" class="letter">
+	    <div class="segment"></div>
+	  </div>
+	  <div id="n" class="letter">
+	    <div class="segment"></div>
+	    <div class="segment"></div>
+	    <div class="segment"></div>
+	  </div>
 	</div>
-		<a href="https://se.linkedin.com/in/hejelin"><img class="socmed" src="linkedin-g.svg" alt="facebook" /></a>
-		<a href="http://twitter.com/hejelinnilsson"><img class="socmed" src="twitter-g.svg" alt="facebook" /></a>
-		<a href="http://github.com/hejelin"><img class="socmed" src="github-g.svg" alt="facebook" /></a>
-		<a href="http://hejelinnilsson.tumblr.com"><img class="socmed" src="tumblr-g.svg" alt="facebook" /></a>
-		<a href="mailto:elin.nilsson30@gmail.com"><img class="socmed" src="mail-g.svg" alt="facebook" /></a>
-</div>
-
-<h1>Projects</h1>
-
-<div class="block">
-	<img src="placenotes.png" alt="placenotes" />
-	<div class="text-box">
-		<h2>PlaceNotes</h2>
-		<p>The final project in an iOS development course I took was to develop whatever app you wanted, and thus PlaceNotes was born. PlaceNotes is a position-based note taking app, where users can make notes that are tied to a location, and can only be accessed at that location. Use-cases includes making notes about yummy dishes to remember at a restautant, PRs at the gym, notes about work that you can't get stressed about at home, etc. Parse was used as a backend service with location based data objects.</p>
-		<p><strong>Tech used:</strong> iOS native (obj-C) and <a href="http://parse.com/" target="_blank">Parse</a></p>
+	<h2>UX Engineer in Sweden</h2>
+	<h3>Currently doing my master thesis at Spotify</h3>
+	<div class="icon_container">
+		<a href="http://twitter.com/hejelinnilsson" target="_blank"><img src="imgs/twitter-g.svg" alt="twitter" /></a>
+		<a href="http://github.com/hejelin" target="_blank"><img src="imgs/github-g.svg" alt="github" /></a>
+		<a href="http://hejelinnilsson.tumblr.com" target="_blank"><img src="imgs/tumblr-g.svg" alt="tumblr" /></a>
+		<a href="http://linkedin.com/in/hejelin" target="_blank"><img src="imgs/linkedin-g.svg"alt="linkedin" /></a>
+		<a href="mailto:elin.nilsson30@gmail.com"><img src="imgs/mail-g.svg" alt="email" /></a>
 	</div>
-</div>
+</header>
 
-<div class="block">
-	<img src="ecomon.png" alt="Ecomon" />
-	<div class="text-box">
-		<h2>Ecomon</h2>
-		<p>During a course on innovative mobile services and systems, me and three course mates worked on a project called Ecomon. The assignment was to develop a system that uses three devices that makes the user reflect on personal energy consumption. We made an Android app with wear extension and a web app to go with it. The solution was based on gamification and context awareness, so the application sent notifications based on the user's context. The user gets points, achievements or levels up depending on the actions taken from the notification. For example, if it's raining outside, the user might get a notification that says "If you take the bus now, you can make it to work without wasting fuel in your car". The user can then choose to "Buy a ticket" or "Read more", which gives more or less points in the system. The result was a working, albeit restricted and hard coded, prototype of the app, complete with web and wear.<!--Check out the <a href="https://ecomon.herokuapp.com">web app demo</a>. --> I worked on the Android application.</p>
-		<p><strong>Tech used:</strong> Android native with Wear extension, retrofit, yeoman, MEAN-stack.</p>
+<section id="projects">
+	<div class="proj_fullscreen"></div>
+	<h1 class="section_head">Projects</h1>
+	<div class="placeholder_proj"></div>
+</section>
+
+<section>
+	<h1 class="section_head">Experience</h1>
+	<div class="resume">
+		<div class="exp slide">
+			<div class="exp_logo">
+				<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Слой_1" x="0px" y="0px" viewBox="0 0 48 48" enable-background="new 0 0 48 48" xml:space="preserve">
+					<g>
+						<defs>
+							<path id="SVGID_1_" d="M44.5,20H42h-8.2H24v8.5h11.8C34.7,33.9,30.1,37,24,37c-7.2,0-13-5.8-13-13s5.8-13,13-13    c3.1,0,5.9,1.1,8.1,2.9l6.4-6.4C34.6,4.1,29.6,2,24,2C11.8,2,2,11.8,2,24s9.8,22,22,22c11,0,21-8,21-22C45,22.7,44.8,21.3,44.5,20    z"/>
+						</defs>
+						<clipPath id="SVGID_2_">
+							<use xlink:href="#SVGID_1_" overflow="visible"/>
+						</clipPath>
+						<polygon clip-path="url(#SVGID_2_)" fill="#FBBC05" points="0,37 0,11 17,24  "/>
+						<polygon clip-path="url(#SVGID_2_)" fill="#EA4335" points="0,11 17,24 24,17.9 48,14 48,0 0,0  "/>
+						<polygon clip-path="url(#SVGID_2_)" fill="#34A853" points="0,37 30,14 37.9,15 48,0 48,48 0,48  "/>
+						<polygon clip-path="url(#SVGID_2_)" fill="#4285F4" points="48,48 17,24 13,21 48,11  "/>
+					</g>
+				</svg>
+			</div>
+			<h2 class="exp_title">UX design intern</h2>
+			<h3 class="exp_detail">2015, London, United Kingdom</h3>
+			<p class="exp_desc">Worked with web development with the Google Cultural Institute in London in the fall of 2015.</p>
+		</div>
+		<div class="exp slide">
+			<div class="exp_logo">
+				<img src="imgs/spotify.png" alt="Spotify logo" />
+			</div>
+			<h2 class="exp_title">Android intern</h2>
+			<h3 class="exp_detail">2015, Stockholm, Sweden</h3>
+			<p class="exp_desc">Developed view debugging tools for the Spotify Android client during the summer of 2015.</p>
+		</div>
+		<div class="exp slide">
+			<div class="exp_logo">
+				<img src="imgs/umu.png" alt="Umeå University logo" />
+			</div>
+			<h2 class="exp_title">IxD Engineering</h2>
+			<h3 class="exp_detail">2011 - 2016, Umeå, Sweden</h3>
+			<p class="exp_desc">Studied the MSc program in Interaction Technology and Design at Umeå University. <a href="http://interaktion.nu" target="_blank">LINK</a></p>
+		</div>
 	</div>
-</div>
+	<a href="https://docs.google.com/document/d/1I2Fiu_1ojyTJeZRH89xsWn7eNmiec9M-flAWrQScqjc/edit?usp=sharing" 
+		 class="button_link"target="_blank">
+		<button class="action_btn">Resumé &#8594;</button>
+	</a>
+</section>
 
-<div class="block">
-	<img src="saturn.png" alt="Saturn" />
-	<div class="text-box">
-		<h2>Saturn</h2>
-		<p>I was part of the 24-hour <a href="http://diversify.github.io" target="_blank">Diversify-hackathon by Spotify</a> in the fall of 2014, and with my awesome team mates we created Saturn, a game made to broaden your taste in music. Somewhat based on the swedish game "När då då", you guess in which time span on a time line a random song came out. If you are correct, the song is added to the timeline, and so another time span is added for the next song. The songs are from the top lists from every year since 1950. Try out <a href="http://saturn.hejelin.se">the Saturn game</a> for yourself! The source is on <a href="https://github.com/diversify/janu">GitHub</a>. I was the front-end developer.</p>
-		<p><strong>Tech used:</strong> AngularJS, Spotify API.</p>
+<section>
+	<h1 class="section_head">About</h1>
+	<div class="about slide">
+		<img src="imgs/elinunicorn.jpg" alt="elin" class="about_img" />
+		<h2 class="about_title">Hello, I'm Elin</h2>
+		<p class="about_txt">
+			I'm what they call a unicorn: someone who does both code and design. I call myself a UX engineer. I'm born and raised in the forest somewhere in the middle of Sweden, nowhere near anything in particular. When I was all grown up I moved to Umeå to study at university. There, I fell in love with code, interaction design, UX, and creating delightful and useful experiences. I also discovered that the blog designing I had being doing growing up made me a pretty decent web developer. Then I fell in love with mobile development taking courses on Android and iOS development. Now I'm almost done with school, and looking to start working with some exiting stuff with cool people. I'm @hejelin or @hejelinnilsson on most things, if you like following people. I also write things on <a href="http://medium.com/@hejelin" target="_blank">Medium</a> and <a href="http://hejelinnilsson.tumblr.com" target="_blank">Tumblr</a>, if you like reading stuff, and my resumé is <a href="https://docs.google.com/document/d/1I2Fiu_1ojyTJeZRH89xsWn7eNmiec9M-flAWrQScqjc/edit?usp=sharing" target="_blank">right here</a>. Otherwise, hope to see you around!
+		</p>
 	</div>
-</div>
+	<a href="mailto:elin.nilsson30@gmail.com" class="button_link"><button class="action_btn">Contact</button></a>
+</section>
 
-<div class="block">
-	<img src="dateme.png" alt="DateMe" />
-	<div class="text-box">
-		<h2>DateMe</h2>
-		<p>On a course on innovative mobile services and systems, I got the chance to try out Android for the first time. The assignment was to create a dating service that uses three different screens: a web application and an Android application that includes Android Wear. Users register and change profile details via the web application, and via the Android app, users are notified when they are close to other users. If a user wants to meet, other nearby users can send him or her a message asking to meet up. Via Wear, users can see details on nearby users that wants to meet. <!--<a href="https://elinsdateme.herokuapp.com">The DateMe website</a> is up and running on Heroku.--></p>
-		<p><strong>Tech used:</strong> Android native with Wear extension, retrofit, yeoman, MEAN-stack.</p>
+<footer>
+	<div class="icon_container">
+		<a href="http://twitter.com/hejelinnilsson" target="_blank"><img src="imgs/twitter-g.svg" alt="twitter" /></a>
+		<a href="http://github.com/hejelin" target="_blank"><img src="imgs/github-g.svg" alt="github" /></a>
+		<a href="http://hejelinnilsson.tumblr.com" target="_blank"><img src="imgs/tumblr-g.svg" alt="tumblr" /></a>
+		<a href="http://linkedin.com/in/hejelin" target="_blank"><img src="imgs/linkedin-g.svg"alt="linkedin" /></a>
+		<a href="mailto:elin.nilsson30@gmail.com"><img src="imgs/mail-g.svg" alt="email" /></a>
 	</div>
-</div>
-
-<div class="block">
-	<img src="artnet.png" alt="ArtNet" />
-	<div class="text-box">
-		<h2>Artnet</h2>
-		<p>On a prototyping course for mobile applications, me and two classmates worked on a prototype for Artnet, a social network for art. The purpose of the application was to increse interest in art and culture, and to make it more available. With the app, users can easily find art that is nearby or in a nearby museum, and once they visit an art piece, they can rate it. By rating different kinds of art, the users get achievements and work their way up a title tree. Everyone starts out as a brush cleaner, and goes on to become graffiti guru, culture aunt, etc. The prototype made was a web app, which I implemented. See the <a href="http://artnet.hejelin.se">Artnet demo</a> (works best on mobile) or check out the source on <a href="https://github.com/hejelin/artnetinhtml">GitHub</a>.</p>
-		<p><strong>Tech used:</strong> AngularJS.</p>
-	</div>
-</div>
-
-<div class="block">
-	<img src="ubiq.png" alt="SmartOffice" />
-	<div class="text-box">
-		<h2>SmartOffice</h2>
-		<p>Ubiquitous computing is all about integrating technology into our everyday life, our surroundings and the objects we interact with. During an assignment we had the task of designing a context-aware smart environment, and my group came up with SmartOffice, a system designed to replace office assistants. We made a scale model of an office using cardboard, and with different sensors and servos we made a functioning prototypes of different functionalities. The project was also documented with two short videos that can be seen on <a href="http://static.hejelin.se/ubiq">the project website</a>.</p>
-		<p><strong>Tech used:</strong> <a href="http://www.phidgets.com">Phidgets</a>: RFID-tags and readers, LCD-screens, LED-lights, servos etc.</p>
-	</div>
-</div>
-
-<div class="block">
-	<img src="gg.png" alt="Google Glass application" />
-	<div class="text-box">
-		<h2>#tagga2014, Google Glass app</h2>
-		<p>As a school project, me and two course buddies got the chance to develop for Google Glass. Needless to say, we took it. Our initial concept was to create a way to use Google Glass for learning, and the idea that in the future, you can get your homework sent to Glass. We built a platform for this, where you through a web interface can send challenges and such to Glass. I was in charge of the web development, whilst Jonas and Andreas, my colleagues, did the Glass development.</p>
-		<p><strong>Tech used:</strong> Mirror API, Bootstrap, JSP.</p>
-	</div>
-</div>
-
-<div class="block">
-	<img src="hashtagz.png" alt="Hashtagz image search" />
-	<div class="text-box">
-		<h2>Hashtagz image search</h2>
-		<p>Another course project I did was a mashup of the APIs of Instagram, 500px and Flickr using a MEAN-stack that I built with the help of <a href="http://scotch.io/bar-talk/setting-up-a-mean-stack-single-page-application">this awesome scotch.io tutorial</a>. The idea is that you can search for any tag and see the most recent pictures from the different services tagged with that. In the full project you could like images and they were saved and displayed on a separate page.</p><p>I did this project mainly to work some more with AngularJS and to try out the MEAN-stack, since I am a true sucker for Single Page Applications. You can try out the search part of the application on <a href="http://static.hejelin.se/hashtagz">the Hashtagz demo page</a>.</p>
-		<p><strong>Tech used:</strong> MEAN-stack - MongoDB (with mongoose.js), Express.js, AngularJS and Node.js.</p>
-	</div>
-</div>
-
-<div class="block">
-	<img src="glassemul.png" alt="Google Glass emulator" />
-	<div class="text-box">
-		<h2>Visual Google Glass emulator</h2>
-		<p>During another school project, a need to visualize Google Glass cards arose and I decided to make a simple application that does just that. Built with AngularJS, it uses the official Google Glass CSS to style text and images to look like a proper Glass-card. You can see the application on <a href="http://glass.hejelin.se">glass.hejelin.se</a>.</p>
-		<p><strong>Tech used:</strong> AngularJS.</p>
-	</div>
-</div>
-
-<div class="block">
-	<img src="blogtool.png" alt="Blogtool" />
-	<div class="text-box">
-		<h2>Mini-CMS with Rails</h2>
-		<p>During a course Databases and Web Based Systems, I started working on my old website. It was my first time doing something real with a framework, and it turned into a simple mini-CMS. I say mini-CMS since it was limited to blogging and making project-posts. This was my first time in an MVC-setup, and it made me fall in love with it.</p>
-		<p><strong>Tech used:</strong> Ruby on Rails, Sass.</p>
-	</div>
-</div>
-
-<div class="block">
-	<img src="bollnas.png" alt="Bollnäs municipality website" />
-	<div class="text-box">
-		<h2>Bollnas.se</h2>
-		<p>During my summer job in 2013, I got the opportunity to create a design proposal for the redesign of Bollnäs municipality's official website, and they ended up running with it. The site is running on Joomla and the design is fully responsive and based on bootstrap.</p><p>You can visit the website at <a href="http://bollnas.se">bollnas.se</a>.</p>
-		<p><strong>Tech used:</strong> Joomla, Bootstrap.</p>
-	</div>
-</div>
-
-<h1>The end</h1>
+	<h3 id="bye">G'bye! 🦄</h3>
+</footer>
 
 </body>
 </html>
