--- a/index.html
+++ b/index.html
@@ -45,11 +45,10 @@
 	  </div>
 	</div>
 	<h2>UX Engineer in Sweden</h2>
-	<h3>Currently doing my master thesis at Spotify</h3>
+	<h3>Doing Android development at Spotify</h3>
 	<div class="icon_container">
 		<a href="http://twitter.com/hejelinnilsson" target="_blank"><img src="imgs/twitter-g.svg" alt="twitter" /></a>
 		<a href="http://github.com/hejelin" target="_blank"><img src="imgs/github-g.svg" alt="github" /></a>
-		<a href="http://hejelinnilsson.tumblr.com" target="_blank"><img src="imgs/tumblr-g.svg" alt="tumblr" /></a>
 		<a href="http://linkedin.com/in/hejelin" target="_blank"><img src="imgs/linkedin-g.svg"alt="linkedin" /></a>
 		<a href="mailto:elin.nilsson30@gmail.com"><img src="imgs/mail-g.svg" alt="email" /></a>
 	</div>
@@ -64,6 +63,14 @@
 <section>
 	<h1 class="section_head">Experience</h1>
 	<div class="resume">
+		<div class="exp slide">
+			<div class="exp_logo">
+				<img src="imgs/spotify.png" alt="Spotify logo" />
+			</div>
+			<h2 class="exp_title">Android developer</h2>
+			<h3 class="exp_detail">2016+, Stockholm, Sweden</h3>
+			<p class="exp_desc">Working with application architecture and tooling in the mobile platform team.</p>
+		</div>
 		<div class="exp slide">
 			<div class="exp_logo">
 				<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Слой_1" x="0px" y="0px" viewBox="0 0 48 48" enable-background="new 0 0 48 48" xml:space="preserve">
@@ -87,14 +94,6 @@
 		</div>
 		<div class="exp slide">
 			<div class="exp_logo">
-				<img src="imgs/spotify.png" alt="Spotify logo" />
-			</div>
-			<h2 class="exp_title">Android intern</h2>
-			<h3 class="exp_detail">2015, Stockholm, Sweden</h3>
-			<p class="exp_desc">Developed view debugging tools for the Spotify Android client during the summer of 2015.</p>
-		</div>
-		<div class="exp slide">
-			<div class="exp_logo">
 				<img src="imgs/umu.png" alt="Umeå University logo" />
 			</div>
 			<h2 class="exp_title">IxD Engineering</h2>
@@ -114,7 +113,7 @@
 		<img src="imgs/elinunicorn.jpg" alt="elin" class="about_img" />
 		<h2 class="about_title">Hello, I'm Elin</h2>
 		<p class="about_txt">
-			I'm what they call a unicorn: someone who does both code and design. I call myself a UX engineer. I'm born and raised in the forest somewhere in the middle of Sweden, nowhere near anything in particular. When I was all grown up I moved to Umeå to study at university. There, I fell in love with code, interaction design, UX, and creating delightful and useful experiences. I also discovered that the blog designing I had being doing growing up made me a pretty decent web developer. Then I fell in love with mobile development taking courses on Android and iOS development. Now I'm almost done with school, and looking to start working with some exiting stuff with cool people. I'm @hejelin or @hejelinnilsson on most things, if you like following people. I also write things on <a href="http://medium.com/@hejelin" target="_blank">Medium</a> and <a href="http://hejelinnilsson.tumblr.com" target="_blank">Tumblr</a>, if you like reading stuff, and my resumé is <a href="https://docs.google.com/document/d/1I2Fiu_1ojyTJeZRH89xsWn7eNmiec9M-flAWrQScqjc/edit?usp=sharing" target="_blank">right here</a>. Otherwise, hope to see you around!
+		I'm a UX engineer doing Android development at Spotify, and an alumni from the M.Sc program in Interaction Technology and Design. I'm @hejelin or @hejelinnilsson on most things, if you like following people. I occationally write things on <a href="http://medium.com/@hejelin" target="_blank">Medium</a>, if you like reading stuff, and my resumé is <a href="https://docs.google.com/document/d/1I2Fiu_1ojyTJeZRH89xsWn7eNmiec9M-flAWrQScqjc/edit?usp=sharing" target="_blank">right here</a>. Otherwise, hope to see you around!
 		</p>
 	</div>
 	<a href="mailto:elin.nilsson30@gmail.com" class="button_link"><button class="action_btn">Contact</button></a>
@@ -124,7 +123,6 @@
 	<div class="icon_container">
 		<a href="http://twitter.com/hejelinnilsson" target="_blank"><img src="imgs/twitter-g.svg" alt="twitter" /></a>
 		<a href="http://github.com/hejelin" target="_blank"><img src="imgs/github-g.svg" alt="github" /></a>
-		<a href="http://hejelinnilsson.tumblr.com" target="_blank"><img src="imgs/tumblr-g.svg" alt="tumblr" /></a>
 		<a href="http://linkedin.com/in/hejelin" target="_blank"><img src="imgs/linkedin-g.svg"alt="linkedin" /></a>
 		<a href="mailto:elin.nilsson30@gmail.com"><img src="imgs/mail-g.svg" alt="email" /></a>
 	</div>
