--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@
 	  </div>
 	</div>
 	<h2>UX Engineer in Sweden</h2>
-	<h3>Doing Android development at Spotify</h3>
 	<div class="icon_container">
 		<a href="http://twitter.com/hejelinnilsson" target="_blank"><img src="imgs/twitter-g.svg" alt="twitter" /></a>
 		<a href="http://github.com/hejelin" target="_blank"><img src="imgs/github-g.svg" alt="github" /></a>
@@ -54,12 +53,6 @@
 	</div>
 </header>
 
-<section id="projects">
-	<div class="proj_fullscreen"></div>
-	<h1 class="section_head">Projects</h1>
-	<div class="placeholder_proj"></div>
-</section>
-
 <section>
 	<h1 class="section_head">Experience</h1>
 	<div class="resume">
@@ -67,9 +60,9 @@
 			<div class="exp_logo">
 				<img src="imgs/spotify.png" alt="Spotify logo" />
 			</div>
-			<h2 class="exp_title">Android developer</h2>
-			<h3 class="exp_detail">2016+, Stockholm, Sweden</h3>
-			<p class="exp_desc">Working with application architecture and tooling in the mobile platform team.</p>
+			<h2 class="exp_title">Senior Engineer | Tech Lead</h2>
+			<h3 class="exp_detail">2016-2023, Stockholm, Sweden</h3>
+			<p class="exp_desc">Worked with mobile architecture and strategy in various teams.</p>
 		</div>
 		<div class="exp slide">
 			<div class="exp_logo">
@@ -101,10 +94,16 @@
 			<p class="exp_desc">Studied the MSc program in Interaction Technology and Design at Umeå University. <a href="http://interaktion.nu" target="_blank">LINK</a></p>
 		</div>
 	</div>
-	<a href="https://docs.google.com/document/d/1I2Fiu_1ojyTJeZRH89xsWn7eNmiec9M-flAWrQScqjc/edit?usp=sharing" 
+	<a href="https://docs.google.com/document/d/1jwepskSj6LujnUvlfk-yD05KfvodA6URdmDBIOBurMg/edit?usp=sharing" 
 		 class="button_link"target="_blank">
 		<button class="action_btn">Resumé &#8594;</button>
 	</a>
+</section>
+
+<section id="projects">
+	<div class="proj_fullscreen"></div>
+	<h1 class="section_head">Projects</h1>
+	<div class="placeholder_proj"></div>
 </section>
 
 <section>
@@ -113,7 +112,7 @@
 		<img src="imgs/elinunicorn.jpg" alt="elin" class="about_img" />
 		<h2 class="about_title">Hello, I'm Elin</h2>
 		<p class="about_txt">
-		I'm a UX engineer doing Android development at Spotify, and an alumni from the M.Sc program in Interaction Technology and Design. I'm @hejelin or @hejelinnilsson on most things, if you like following people. I occationally write things on <a href="http://medium.com/@hejelin" target="_blank">Medium</a>, if you like reading stuff, and my resumé is <a href="https://docs.google.com/document/d/1I2Fiu_1ojyTJeZRH89xsWn7eNmiec9M-flAWrQScqjc/edit?usp=sharing" target="_blank">right here</a>. Otherwise, hope to see you around!
+			I'm an enthusiastic engineer who enjoys the intersection between tech, design, product, organisational leadership, strategy and society, and solving the fascinating challenges that exist there. I'm an alumni from the M.Sc program in Interaction Technology and Design and Spotify. I'm inactive on most places as @hejelin or @hejelinnilsson. I occationally write things on <a href="http://medium.com/@hejelin" target="_blank">Medium</a>, if you like reading stuff, and my resumé is <a href="https://docs.google.com/document/d/1jwepskSj6LujnUvlfk-yD05KfvodA6URdmDBIOBurMg/edit?usp=sharing" target="_blank">right here</a>. Otherwise, hope to see you around!
 		</p>
 	</div>
 	<a href="mailto:elin.nilsson30@gmail.com" class="button_link"><button class="action_btn">Contact</button></a>
