--- a/glass/index.html
+++ b/glass/index.html
@@ -5,7 +5,7 @@
 		<title>Visual Glass Emulator</title>
 		<link rel="stylesheet" href="style.css">
 		<link rel="stylesheet" href="GlassCSS.css">
-		<link href='http://fonts.googleapis.com/css?family=Roboto:100,300,300italic,100italic,400' rel='stylesheet' type='text/css'>
+		<link href='https://fonts.googleapis.com/css?family=Roboto:100,300,300italic,100italic,400' rel='stylesheet' type='text/css'>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.15/angular.min.js"></script>
 		<script src="controllers.js"></script>
