A few more tweaks to the about-me-section 📝

--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
 		<img src="imgs/elinunicorn.jpg" alt="elin" class="about_img" />
 		<h2 class="about_title">Hej, I'm Elin!</h2>
 		<p class="about_txt">
-			I'm an enthusiastic engineer who enjoys the intersection between tech, design, product, organisational leadership, strategy and society, and solving the fascinating challenges that exist there. I'm a tech industry researcher at <a href="https://newsletter.pragmaticengineer.com/s/deepdives" target="_blank">The Pragmatic Engineer</a>, and an alumni from the M.Sc program in <a href="http://interaktion.nu/" target="_blank">Interaction Technology and Design</a> and Spotify. I'm inactive on most places as @hejelin or @hejelinnilsson. I've got <a href="https://linktr.ee/hejelin" target="_blank">a linktree</a>, a <a href="https://www.instagram.com/mya.the.van/" target="_blank">small adventure van</a>, and I have, at times, written things on <a href="http://medium.com/@hejelin" target="_blank">Medium</a>.
+			I'm an enthusiastic engineer who enjoys the intersection between tech, design, product, organisational leadership, strategy and society. I'm a tech industry researcher at <a href="https://newsletter.pragmaticengineer.com/s/deepdives" target="_blank">The Pragmatic Engineer</a>, and an alumni from the M.Sc program in <a href="http://interaktion.nu/" target="_blank">Interaction Technology and Design</a> and Spotify. I'm inactive on most places as @hejelin or @hejelinnilsson. I've got <a href="https://linktr.ee/hejelin" target="_blank">a linktree</a>, a <a href="https://www.instagram.com/mya.the.van/" target="_blank">small adventure van</a>, and I have, at times, written things on <a href="http://medium.com/@hejelin" target="_blank">Medium</a>.
 		</p>
-		<h3 class="about_title">Reach out if...</h3>
+		<h3 class="about_title">Talk to me about...</h3>
 		<p class="about_txt">
-			you want to work together on (or hear me do a talk about) improving developer experience and platform engineering, scaling (mobile) product development, design systems and server-driven (mobile) features, tech leadership in engineers, working with feedback, or dreams of living in a cabin in the woods.
+			technical product management, improving developer experience and platform engineering, developing (mobile) design systems or server-driven features, tech leadership and staff/+ engineering, or speaking engagements.
 		</p>
 	</div>
 </section>
